few points buttonss apply

--- a/app/assets/stylesheets/components/_form-background.scss
+++ b/app/assets/stylesheets/components/_form-background.scss
@@ -1,7 +1,7 @@
 .form-background {
   background-color: #CADAF5;
   border-radius: 20px;
-  box-shadow: 4px 4px 0px #ED89BA;
+  box-shadow: 1px 1px 4px rgba (100, 100, 100, 0.8);
   padding: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
