--- a/app/assets/stylesheets/components/_btn-form.scss
+++ b/app/assets/stylesheets/components/_btn-form.scss
@@ -3,10 +3,11 @@
   color: white;
   border-radius: 10px;
   padding: 8px 24px;
+  margin-left: 5px;
   transition: background 0.2s ease;
 }
 
 .btn-form:hover{
-  box-shadow: 2px 2px 0px $medium-red;
+  box-shadow: 1px 1px 3px $medium-red;
   opacity: 1;
 }
