--- a/app/views/mothers/new.html.erb
+++ b/app/views/mothers/new.html.erb
@@ -1,4 +1,4 @@
-<div id="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://www.thesun.co.uk/wp-content/uploads/2019/07/NINTCHDBPICT000509962875.jpg?w=1240);">
+<div id="banner">
   <div class="container">
     <div class="col-8 ">
       <div class ="form-background">
