--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,12 +21,10 @@
           <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Dashboard", dashboard_path, class: "dropdown-item" %>
-            <%= link_to "Ton profil", edit_user_registration_path, class: "dropdown-item" %>
-            <%= link_to "Ajouter une MILFR", new_user_mother_path(current_user.id), class: "dropdown-item" %>
-            <%= link_to "Déconnection", destroy_user_session_path, method: :delete, data: {confirm: "Are you sure to log out?"}, class: "dropdown-item" %>
+            <%= link_to "Ajoutez vos MILFR", new_user_mother_path(current_user.id), class: "dropdown-item" %>
+            <%= link_to "Déconnexion", destroy_user_session_path, method: :delete, data: {confirm: "Are you sure to log out?"}, class: "dropdown-item" %>
           </div>
-        </li>
-      <% else %>
+        </lis      <% else %>
         <li class="nav-item">
           <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
         </li>
