--- a/app/views/mothers/_reviews-board.html.erb
+++ b/app/views/mothers/_reviews-board.html.erb
@@ -7,7 +7,9 @@
         <div class="d-flex pt-3">
           <div class="reviews-info-owner-avatar">
               <% if User.find(review.user_id).avatar.attached? %>
-                <%= cl_image_tag User.find(review.user_id).avatar.key, class: "avatar" %>
+                <%= link_to(user_path(@mother.user)) do %>
+                  <%=cl_image_tag User.find(@mother.user_id).avatar.key, title: User.find(@mother.user_id).name, class: "avatar"%>
+              <% end %>
               <% else %>
                 <%= image_tag "http://icons.iconarchive.com/icons/gianni-polito/colobrush/256/software-crystal-msn-icon.png", width: 40 %>
               <% end %>
