still going on profile page

--- a/app/assets/stylesheets/components/_user-info-card.scss
+++ b/app/assets/stylesheets/components/_user-info-card.scss
@@ -18,3 +18,22 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding-bottom: 15px;
 }
+
+.user-right-column-top {
+  margin-top: 25px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.user-right-column-mother-card {
+  width: 200px;
+  height: 200px;
+  color: white;
+  border-radius: 5px;
+  margin-top: 25px;
+  padding-top: 170px;
+  padding-left: 10px;
+}
+
+h5 {
+  margin-top: 10px;
+}
