--- a/app/views/bookings/mark_as_declined.js.erb
+++ b/app/views/bookings/mark_as_declined.js.erb
@@ -1,5 +1,5 @@
-function refreshForm() {
+function decline() {
   document.querySelector("[data-booking-id='<%= @booking.id %>']").innerHTML = "decliné";
 }
 
-refreshForm()
+decline()
