--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,5 +1,5 @@
 <div class="container" style="min-height: 87vh">
-  Bienvenue <%= @user.name %> sur ton Dashboard
+  Coucou! Bienvenue <%= @user.name %> sur ton Dashboard
 
   <i class="fas fa-comment-dots"></i>
 
@@ -24,6 +24,7 @@
           <% end %>
       </p>
     <% end %>
+
 
 
   <p><strong>Liste de tes réservations</strong></p>
