--- a/app/views/bookings/mark_as_accepted.js.erb
+++ b/app/views/bookings/mark_as_accepted.js.erb
@@ -1,5 +1,5 @@
 function accept() {
-  document.querySelector("[data-booking-id='<%= @booking.id %>']").innerHTML = "acceptée";
+  document.querySelector("[data-booking-id='<%= @booking.id %>']").innerHTML = "Accepté!";
 }
 
 accept()
