--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,40 +1,99 @@
-<div class="container" style="min-height: 87vh">
-  Coucou! Bienvenue <%= @user.name %> sur ton Dashboard
+<div class="container">
 
-  <i class="fas fa-comment-dots"></i>
+  <div class="d-flex">
 
-  <p><strong>Liste de tes MIFLR</strong></p>
-    <% @mothers.each do |mother| %>
-      <%= cl_image_tag mother.photos.first.key, height: 100 %>
-      <p><%= mother.name %></p>
-    <% end %>
-  <p><strong>Liste des requêtes de tes MILFR</strong></p>
-    <% @requests.each do |booking| %>
-      <p><%= booking.user.name %>
-        a booke la mere <%= booking.mother.name %>
-        <br>Du <%= booking.starts_at %>
-        au <%= booking.ends_at %>
-        <br>Requête <span data-booking-id="<%= booking.id %>"> En Attente </span>
-        <br>
-          <%= link_to booking_accepted_path(booking), remote: true do  %>
-            <i class="fas fa-check" style="color:green"></i>
+    <div class="col-3 user-info-card ml-n5" style="height:600px" >
+      <div class="container">
+        <div class="user-info-card-avatar">
+          <%= cl_image_tag @user.avatar.key, class: "avatar-big" %>
+        </div>
+        <div class="user-info-card-middle">
+          <p><i class="fas fa-comment-dots"></i> <%= @user.reviews.length %> Commentaire(s)</p>
+          <p><i class="fas fa-check" style="color:green"></i> Utilisateur verifié</p>
+        </div>
+        <div class="user-info-card-middle">
+          <p><i class="fas fa-female"></i> <%= @user.mothers.length %> MILFRs actuellement</p>
+          <p><i class="fas fa-home"></i> Paris</p>
+        </div>
+        <div class="pt-3">
+          <p><i class="fas fa-dollar-sign"></i> <%= @money %> euros recoltés avec tes MILFRs</p>
+          <p><i class="fas fa-handshake"></i> <%= @bookings.length %> Réservations faites</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="user-right-column col-4 offset-1 mt-3" style="padding-right: 0; padding-left: 0">
+      <p class="mt-3"><strong>Liste des requêtes de tes MILFRs</strong></p>
+        <div>
+          <% @requests.each do |booking| %>
+            <div class="border shadow-sm rounded d-flex justify-content-between align-items-center p-2 mb-1" data-booking-div-id="<%= booking.id %>">
+              <% if booking.user.avatar.attached? %>
+                <%= link_to(user_path(booking.user)) do %>
+                  <%= cl_image_tag booking.user.avatar.key, class: "avatar" %>
+                <% end %>
+              <% else %>
+                <%= link_to(user_path(booking.user)) do %>
+                  <%= image_tag "http://icons.iconarchive.com/icons/gianni-polito/colobrush/256/software-crystal-msn-icon.png", class: "avatar" %>
+                <% end %>
+              <% end %>
+              <p class="text-left ml-1" style="margin-bottom: 0px"><%= booking.user.name %>
+                veut booker la mère
+                <br> <%= booking.mother.name %>
+                <br><small><em>Du <%= booking.starts_at %>
+                au <%= booking.ends_at %></em></small>
+              </p>
+              <div class="text-right">
+                <%= link_to booking_accepted_path(booking), style:"font-size:25px", remote: true do  %>
+                  <i class="fas fa-check pr-1" style="color:green"></i>
+                <% end %>
+                <%= link_to booking_declined_path(booking), style:"font-size:25px", remote: true do  %>
+                  <i class="fas fa-times" style="color:red"></i>
+                <% end %>
+                <p style="margin-bottom:0px; font-size:13px" data-booking-id="<%= booking.id %>">
+                <br>
+                </p>
+              </div>
+            </div>
           <% end %>
-          <%= link_to booking_declined_path(booking), remote: true do  %>
-            <i class="fas fa-times" style="color:red"></i>
+        </div>
+    </div>
+
+
+    <div class="Cuser-right-column col-4 offset-1 mt-3" style="padding-right: 0; padding-left: 0">
+      <p class="mt-3"><strong>Liste de tes réservations de MILFRs</strong></p>
+          <% @bookings.each do |booking| %>
+        <div class="border d-flex justify-content-between align-items-center shadow-sm rounded p-2 mb-1">
+            <%= cl_image_tag booking.mother.photos.first.key, class: "avatar" %>
+            <p style="margin-bottom: 0px">Du <%= booking.starts_at %> au
+              <%= booking.ends_at %>
+              <br> Prix: <%= booking.price %> euros
+            </p>
+            <div>
+              <p style="font-size:13px"> Décision: <%= booking.decision ? "!" : "?" %></p>
+              <p style="font-size:13px"> Requête: <%= booking.accept ? "✓" : "☒"%></p>
+              <% if booking.accept %>
+                <p style="font-size:13px; margin-bottom: 0px">Status: <%= booking.done ? "👌" : "⏳"%></p>
+              <% end %>
+            </div>
+        </div>
           <% end %>
-      </p>
-    <% end %>
+    </div>
+  </div>
 
-
-
-  <p><strong>Liste de tes réservations</strong></p>
-    <% @bookings.each do |booking| %>
-      <p>Periode: <%= booking.starts_at %> to
-        <%= booking.ends_at %>,
-        - Prix: <%= booking.price %> euros
-        - Décision: <%= booking.decision ? "Le propriétaire a pris une décision" : "en attente, le propriétaire n'a pas pris de décision" %>
-        - Requête <%= booking.accept ? "acceptée" : "déclinée (ou decision non prise)"%>
-        - Status de la réservation <%= booking.done ? "completé" : "a venir"%>
-      </p>
-    <% end %>
+  <div class="col-10 offset-3 my-3 border">
+    <p class="mt-3"><strong>Liste de tes MIFLRs</strong></p>
+    <div class="d-flex justify-content-around flex-wrap mb-3 border-top">
+      <% @user.mothers.each do |mother| %>
+        <%= link_to mother_path(mother) do %>
+          <div class="user-right-column-mother-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path mother.photos.sample.key, crop: :thumb, gravity: :face, width: 200, height: 200 %>')">
+            <%= mother.name %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
 </div>
+
+
+
