--- a/app/assets/stylesheets/components/_user-info-card.scss
+++ b/app/assets/stylesheets/components/_user-info-card.scss
@@ -19,9 +19,20 @@
   padding-bottom: 15px;
 }
 
+.user-info-card-bottom {
+  margin-top: 25px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 15px;
+}
+
 .user-right-column-top {
   margin-top: 25px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.user-right-column-bottom {
+  margin-top: 25px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .user-right-column-mother-card {
