--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -9,6 +9,7 @@
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
   position: sticky;
   bottom: 0px;
+  margin-top: 15px;
 }
 .footer-links {
   display: flex;
