--- a/app/assets/stylesheets/components/_user-info-card.scss
+++ b/app/assets/stylesheets/components/_user-info-card.scss
@@ -20,6 +20,10 @@
   padding-bottom: 15px;
 }
 
+.user-info-card-bottom {
+  padding-top: 25px;
+}
+
 .user-right-column-top {
   margin-top: 25px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
