couleur des icones dashboard

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -8,16 +8,16 @@
           <%= cl_image_tag @user.avatar.key, class: "avatar-big" %>
         </div>
         <div class="user-info-card-middle">
-          <p><i class="fas fa-comment-dots"></i> <%= @user.reviews.length %> Commentaire(s)</p>
+          <p><i class="fas fa-comment-dots" style="color:#B71D12"></i> <%= @user.reviews.length %> Commentaire(s)</p>
           <p><i class="fas fa-check" style="color:green"></i> Utilisateur verifié</p>
         </div>
         <div class="user-info-card-middle">
-          <p><i class="fas fa-female"></i> <%= @user.mothers.length %> MILFRs actuellement</p>
-          <p><i class="fas fa-home"></i> Paris</p>
+          <p><i class="fas fa-female" style="color:#B71D12"></i> <%= @user.mothers.length %> MILFRs actuellement</p>
+          <p><i class="fas fa-home" style="color:#B71D12"></i> Paris</p>
         </div>
         <div class="pt-3">
-          <p><i class="fas fa-dollar-sign"></i> <%= @money %> euros recoltés avec tes MILFRs</p>
-          <p><i class="fas fa-handshake"></i> <%= @bookings.length %> Réservations faites</p>
+          <p><i class="fas fa-dollar-sign" style="color:#B71D12"></i> <%= @money %> euros recoltés avec tes MILFRs</p>
+          <p><i class="fas fa-handshake" style="color:#B71D12"></i> <%= @bookings.length %> Réservations faites</p>
         </div>
       </div>
     </div>
