Remy paye le ptit dej

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -13,6 +13,7 @@
         <div class="user-info-card-bottom">
           <p><i class="fas fa-female" style="color:#B71D12"></i> <%= @user.mothers.length %> MILFRs actuellement</p>
           <p><i class="fas fa-home" style="color:#B71D12"></i>Paris</p>
+          <%= @user.bookings.length %>
         </div>
       </div>
     </div>
